@@ -1,5 +1,12 @@
 2005-06-06  Maciej Stachowiak  <mjs@apple.com>
 
+        Reviewed by NOBODY (OOPS!).
+
+        * WebKitSystemInterface.h:
+        * libWebKitSystemInterface.a:
+
+2005-06-06  Maciej Stachowiak  <mjs@apple.com>
+
 	- updated
 
         * WebKitSystemInterface.h:
